# dotfiles

./: .asoundrc  .bash_aliases  .bash_functions  .bashrc  .emacs  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .mbsyncrc  .msmtp  .tmux.conf  .vimrc  Audio.org  Bash.org  Emacs.org  Mail.org  Makefile  README.md  README.org  System.org  bootstrap.sh  home-configuration.scm  home.sh  minimal-home-config.scm  pkglist.txt  pyd_requirements.txt  pyproject.toml  test.change
.config/: pipewire
.emacs.d/: Ninit.el  Nitit.el  bookmarks  custom.el  eww-bookmarks  init.el  network-security.data  places
.jupyter/: jupyter_console_config.py  jupyter_notebook_config.json  jupyter_qtconsole_config.py  migrated
.ssh/: id_rsa  id_rsa.pub  known_hosts
adgit/: .gitconfig
admccartney/: functions.scm
admu/: .bash_profile  .bashrc  home-configuration.scm  home-configuration.scm~
bash/: .bash_aliases  .bash_env  .bash_functions  .bash_profile  .bash_prompt  .bashrc  .fzf.bash  .profile
deb_install/: getnodelts.sh  pkglist.bak  pkglist.txt  setup.sh
dnsmasq.d/: 00-kind-dnsmasq.conf
environments/: homeless_nvim.env
fedora/: manifest.yaml
files/: bash-aliases  bash-functions  bash-profile  bash-prompt  bash-rc  mise-bash
ghostty/: config
git/: .gitconfig
go/: manifest
gpg/: gpg.conf
guile/: .geiser-guile
guix/: ad-base-manifest.scm  channels.scm
guix-systems/: palais-de-mari.scm  server.scm
init/: collect_kubeconfigs.bash
mail/: .mailcap  .mbsyncrc  .msmtprc
mk-scripts/: ad-guix-install.sh  common  get-docker  get-go  ln-minimal  svc-minimal  (+6 more)
(+244 files in other folders)
