[project]
name = "adc"
version = "0.1.0"
description = "Add configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adc"]

[project.scripts]
adc = "adc.async_cli:main"
